--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,23 @@
 group 'com.barracudapff.web'
 version '1.0-SNAPSHOT'
 
+
 buildscript {
-    ext.kotlin_version = '1.1-M02'
-    ext.ktor_version = "0.9.0"
+    ext.kotlin_version = '1.2.70'
+    ext.ktor_version = '0.9.5'
 
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.51"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70"
     }
 }
 
-apply plugin: 'kotlin'
 apply plugin: 'java'
-apply plugin: 'application'
-
-mainClassName = 'Main'
+apply plugin: 'kotlin'
 
 sourceCompatibility = 1.8
-compileKotlin { kotlinOptions.jvmTarget = "1.8" }
-compileTestKotlin { kotlinOptions.jvmTarget = "1.8" }
-
-kotlin { experimental { coroutines "enable" } }
 
 repositories {
     mavenCentral()
@@ -32,8 +26,24 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
+    compile 'io.netty:netty-all:4.1.10.Final'
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:1.2.1"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
